# WEB-MONITOR

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  KURULUM.md  LICENSE  README.md  START.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
nginx/: default.conf  htpasswd
scripts/: demo.sh  run_watchdog_tui.sh
watchdog/: links.txt  main.py  pyproject.toml  requirements.txt
watchdog/config/: critical_ci_services.yaml  maintenance_windows.yaml  slo.yaml  targets.yaml  targets_backup.yaml  targets_chaos.yaml  targets_links.yaml  targets_minimal.yaml  targets_public_institutions.yaml  targets_public_institutions_expanded.yaml
watchdog/docs/: OPERASYON_VE_MIMARI_NOTLARI.md  RAPOR_ANALIZ_EKSIKLIK.md  SLO_NOTLARI.md
watchdog/scripts/: expand_targets.py  links_to_targets.py
watchdog/src/: __init__.py
watchdog/src/api/: app.py
watchdog/src/api/static/: index.html
watchdog/src/core/: __init__.py  config.py  logger.py
watchdog/src/infrastructure/: __init__.py  database.py  notifiers.py
watchdog/src/models/: __init__.py  target.py
watchdog/src/services/: __init__.py  monitor.py  slo.py
watchdog/tests/: test_backpressure_and_resilience.py  test_database.py  test_health_logic.py  test_notifiers.py  test_slo_logic.py  test_ssrf_and_targets.py
